# nuwa-admin

./: .dockerignore  .gitignore  Dockerfile  README.md  admin_ui.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
pages/: 1_Playground.py  1_对话调试.py  1_搭建调试.py  2_Skill_Editor.py  2_人格工坊.py  2_人格配置.py  3_Eval.py  3_观测中心.py  3_质量评测.py  4_用户记忆.py  4_质量评测.py  5_用户记忆.py  6_发布中心.py
