[project]
name = "nuwa-admin"
version = "0.1.0"
description = "女娲底座管理面板 (Phase 0 - Streamlit PoC)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Jack Chen" }
]

dependencies = [
    "streamlit>=1.36.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
