[project]
name = "nuwa-admin"
version = "0.1.0"
description = "女娲管理后台"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Jack Chen" }
]

dependencies = [
    "streamlit>=1.36.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
]

[tool.uv]
package = false
